--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,58 @@
+name: Build Android APK
 
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout código
+      uses: actions/checkout@v3
+
+    - name: Instalar dependencias del sistema
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          git \
+          zip \
+          unzip \
+          openjdk-17-jdk \
+          python3-pip \
+          autoconf \
+          libtool \
+          pkg-config \
+          zlib1g-dev \
+          libncurses5-dev \
+          libncursesw5-dev \
+          libtinfo5 \
+          cmake \
+          libffi-dev \
+          libssl-dev \
+          automake
+
+    - name: Instalar Buildozer y Cython
+      run: |
+        pip3 install --user --upgrade Cython==0.29.33 virtualenv
+        pip3 install --user buildozer
+
+    - name: Configurar Buildozer
+      run: |
+        export PATH="$HOME/.local/bin:$PATH"
+        buildozer init
+
+    - name: Compilar APK
+      run: |
+        export PATH="$HOME/.local/bin:$PATH"
+        buildozer -v android debug
+
+    - name: Subir APK como artefacto
+      uses: actions/upload-artifact@v3
+      with:
+        name: AzojuanitoP41-APK
+        path: bin/*.apk
+        retention-days: 30
