--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt-get install -y libtinfo6
         sudo ln -s /usr/lib/x86_64-linux-gnu/libtinfo.so.6 /usr/lib/x86_64-linux-gnu/libtinfo.so.5
         
-        # Instalar todas las dependencias necesarias :cite[2]
+        # Instalar todas las dependencias necesarias
         sudo apt-get install -y \
           git \
           zip \
@@ -41,33 +41,41 @@ jobs:
           automake \
           wget
 
+    - name: Instalar Android Commandline Tools
+      run: |
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        
+        # Descargar e instalar commandlinetools desde fuente oficial
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
+        unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/android-sdk/cmdline-tools/
+        mv ~/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest
+        rm cmdline-tools.zip
+
+    - name: Configurar entorno y aceptar licencias
+      run: |
+        export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
+        export ANDROID_SDK_ROOT="$ANDROID_HOME"
+        export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
+        
+        # Verificar que sdkmanager existe
+        ls -la $ANDROID_HOME/cmdline-tools/latest/bin/ || echo "No se encontraron herramientas"
+        
+        # Aceptar licencias automáticamente (suprimiendo Broken pipe)
+        yes 2>/dev/null | sdkmanager --licenses || true
+        
+        # Instalar componentes específicos de Android
+        sdkmanager "build-tools;34.0.0" "platforms;android-31" "platform-tools"
+
     - name: Instalar Buildozer y Cython
       run: |
         pip3 install --user --upgrade Cython==0.29.33 virtualenv
         pip3 install --user buildozer
 
-    - name: Configurar Android SDK y aceptar licencias
-      run: |
-        export PATH="$HOME/.local/bin:$PATH"
-        # Crear directorio para licencias
-        mkdir -p ~/.android
-        touch ~/.android/repositories.cfg
-        
-        # Configurar variables de entorno para Android SDK
-        export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
-        export ANDROID_SDK_ROOT="$ANDROID_HOME"
-        
-        # Aceptar todas las licencias automáticamente :cite[2]
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-        
-        # Instalar versiones específicas de build-tools y plataformas :cite[2]
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;34.0.0" "platforms;android-31" "platform-tools"
-
     - name: Compilar APK con Buildozer
       run: |
         export PATH="$HOME/.local/bin:$PATH"
-        # Forzar la actualización y compilar
-        buildozer android clean
         buildozer -v android debug
 
     - name: Subir APK como artefacto
