--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,54 +18,34 @@ jobs:
     - name: Instalar dependencias del sistema
       run: |
         sudo apt-get update
-        # Solucionar problema de libtinfo5 en Ubuntu 24.04
         sudo apt-get install -y libtinfo6
         sudo ln -s /usr/lib/x86_64-linux-gnu/libtinfo.so.6 /usr/lib/x86_64-linux-gnu/libtinfo.so.5
-        
-        # Instalar todas las dependencias necesarias
-        sudo apt-get install -y \
-          git \
-          zip \
-          unzip \
-          openjdk-17-jdk \
-          python3-pip \
-          autoconf \
-          libtool \
-          pkg-config \
-          zlib1g-dev \
-          libncurses5-dev \
-          libncursesw5-dev \
-          cmake \
-          libffi-dev \
-          libssl-dev \
-          automake \
-          wget
+        sudo apt-get install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev cmake libffi-dev libssl-dev automake wget
 
     - name: Instalar Android Commandline Tools
       run: |
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
-        # Descargar e instalar commandlinetools desde fuente oficial
+        # Descargar commandlinetools
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
         unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/android-sdk/cmdline-tools/
         mv ~/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest
         rm cmdline-tools.zip
 
-    - name: Configurar entorno y aceptar licencias
+    - name: Configurar SDK Android
       run: |
         export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
         
-        # Verificar que sdkmanager existe
-        ls -la $ANDROID_HOME/cmdline-tools/latest/bin/ || echo "No se encontraron herramientas"
+        # Crear enlace simbólico para la ruta esperada por Buildozer
+        mkdir -p $ANDROID_HOME/tools
+        ln -sf $ANDROID_HOME/cmdline-tools/latest/bin $ANDROID_HOME/tools/bin
         
-        # Aceptar licencias automáticamente (suprimiendo Broken pipe)
-        yes 2>/dev/null | sdkmanager --licenses || true
-        
-        # Instalar componentes específicos de Android
+        # Aceptar licencias
+        yes | sdkmanager --licenses || true
         sdkmanager "build-tools;34.0.0" "platforms;android-31" "platform-tools"
 
     - name: Instalar Buildozer y Cython
@@ -76,6 +56,9 @@ jobs:
     - name: Compilar APK con Buildozer
       run: |
         export PATH="$HOME/.local/bin:$PATH"
+        # Forzar la ruta correcta del SDK
+        export ANDROIDSDK="$HOME/.buildozer/android/platform/android-sdk"
+        export ANDROIDNDK="$HOME/.buildozer/android/platform/android-ndk-r25b"
         buildozer -v android debug
 
     - name: Subir APK como artefacto
