--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,26 +27,28 @@ jobs:
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
-        # Descargar commandlinetools
+        # Descargar commandlinetools actualizadas
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
         unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/android-sdk/cmdline-tools/
         mv ~/.buildozer/android/platform/android-sdk/cmdline-tools/cmdline-tools ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest
         rm cmdline-tools.zip
 
-    - name: Configurar SDK Android
+    - name: Configurar entorno Android SDK
       run: |
         export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
         
-        # Crear enlace simbólico para la ruta esperada por Buildozer
+        # Crear estructura de directorios esperada por Buildozer
         mkdir -p $ANDROID_HOME/tools
         ln -sf $ANDROID_HOME/cmdline-tools/latest/bin $ANDROID_HOME/tools/bin
         
-        # Aceptar licencias
-        yes | sdkmanager --licenses || true
-        sdkmanager "build-tools;34.0.0" "platforms;android-31" "platform-tools"
+        # Aceptar licencias automáticamente
+        yes 2>/dev/null | sdkmanager --licenses || true
+        
+        # Instalar componentes específicos
+        sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-31" "emulator"
 
     - name: Instalar Buildozer y Cython
       run: |
@@ -56,9 +58,11 @@ jobs:
     - name: Compilar APK con Buildozer
       run: |
         export PATH="$HOME/.local/bin:$PATH"
-        # Forzar la ruta correcta del SDK
-        export ANDROIDSDK="$HOME/.buildozer/android/platform/android-sdk"
-        export ANDROIDNDK="$HOME/.buildozer/android/platform/android-ndk-r25b"
+        export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
+        export ANDROID_SDK_ROOT="$ANDROID_HOME"
+        
+        # Limpiar compilación anterior y compilar
+        buildozer android clean
         buildozer -v android debug
 
     - name: Subir APK como artefacto
