--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
+        # Descargar commandlinetools actualizadas
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
         unzip -q cmdline-tools.zip -d ~/.buildozer/android/platform/android-sdk/cmdline-tools/
@@ -39,16 +40,28 @@ jobs:
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
         
+        # Crear estructura de directorios esperada por Buildozer
         mkdir -p $ANDROID_HOME/tools
         ln -sf $ANDROID_HOME/cmdline-tools/latest/bin $ANDROID_HOME/tools/bin
         
+        # Aceptar licencias automáticamente
         yes 2>/dev/null | sdkmanager --licenses || true
-        sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-31"
+        
+        # Instalar componentes específicos
+        sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-31" "emulator"
 
     - name: Instalar Buildozer y Cython
       run: |
         pip3 install --user --upgrade Cython==0.29.33 virtualenv
         pip3 install --user buildozer
+
+    - name: Preparar entorno de compilación
+      run: |
+        export PATH="$HOME/.local/bin:$PATH"
+        # Forzar la descarga de python-for-android primero
+        buildozer android update
+        # Limpiar compilaciones anteriores problemáticas
+        buildozer android clean || true
 
     - name: Compilar APK con Buildozer
       run: |
@@ -56,7 +69,7 @@ jobs:
         export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         
-        buildozer android clean
+        # Compilar con log detallado para diagnóstico
         buildozer -v android debug
 
     - name: Subir APK como artefacto
