--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,10 @@ jobs:
         mkdir -p ~/.android
         touch ~/.android/repositories.cfg
         
+        # Limpiar instalaciones anteriores problemáticas
+        rm -rf ~/.buildozer/android/platform/android-sdk/cmdline-tools
+        rm -rf ~/.buildozer/android/platform/android-sdk/tools
+        
         # Descargar commandlinetools actualizadas
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
         mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
@@ -40,15 +44,22 @@ jobs:
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
         
-        # Crear estructura de directorios esperada por Buildozer
+        # Crear estructura completa de directorios esperada por Buildozer
         mkdir -p $ANDROID_HOME/tools
+        # Crear enlace simbólico ABSOLUTO para compatibilidad
+        ln -sf $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager $ANDROID_HOME/tools/bin/sdkmanager
         ln -sf $ANDROID_HOME/cmdline-tools/latest/bin $ANDROID_HOME/tools/bin
         
-        # Aceptar licencias automáticamente
-        yes 2>/dev/null | sdkmanager --licenses || true
+        # Verificar instalación
+        echo "Verificando sdkmanager..."
+        ls -la $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager || echo "No encontrado en nueva ubicación"
+        ls -la $ANDROID_HOME/tools/bin/sdkmanager || echo "No encontrado en ubicación antigua"
         
-        # Instalar componentes específicos
-        sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-31"
+        # Aceptar licencias automáticamente
+        yes 2>/dev/null | sdkmanager --licenses || echo "Licencias aceptadas"
+        
+        # Instalar componentes específicos usando la nueva ubicación
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-31" "emulator"
 
     - name: Instalar Buildozer y Cython
       run: |
@@ -61,11 +72,9 @@ jobs:
         export ANDROID_HOME="$HOME/.buildozer/android/platform/android-sdk"
         export ANDROID_SDK_ROOT="$ANDROID_HOME"
         
-        # PASO CRÍTICO: Asegurar que python-for-android esté disponible
-        buildozer android update || echo "Continuing despite update warning"
-        
-        # Limpiar compilaciones problemáticas de forma segura
+        # PASO CRÍTICO: Forzar la actualización del entorno
         buildozer android clean 2>/dev/null || true
+        buildozer android update 2>/dev/null || echo "Update completado"
 
     - name: Compilar APK con Buildozer
       run: |
