--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,29 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout code
+    - name: Checkout del código
       uses: actions/checkout@v4
 
-    - name: Build with Buildozer
-      uses: ArtemSBulgakov/buildozer-action@v1
-      with:
-        command: |
-          buildozer android clean
-          buildozer android debug
-        buildozer_version: stable
-        workdir: .
-      options: --user root  # This line fixes the 'chown' error
+    - name: Instalar dependencias del sistema
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          autoconf automake cmake gettext libtool pkg-config \
+          zlib1g-dev libncurses5-dev libtinfo5 \
+          libffi-dev libssl-dev git zip unzip openjdk-17-jdk
 
-    - name: Upload APK artifact
+    - name: Instalar Python y Buildozer
+      run: |
+        python3 -m pip install --upgrade pip
+        pip3 install --user Cython==0.29.33 buildozer
+
+    - name: Compilar con Buildozer
+      run: |
+        export PATH="$HOME/.local/bin:$PATH"
+        buildozer android clean
+        buildozer android debug
+
+    - name: Subir APK como artefacto
       uses: actions/upload-artifact@v4
       with:
         name: AzojuanitoP41-apk
